Making the navbar on mobile always fixed to the page doesn't stretch

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -106,6 +106,10 @@
     padding-bottom: 4px;
 }
 
+.header-container {
+    overflow: visible;
+}
+
 .site-slogan {
     color: #0c9653;
     font-size: 32px;
@@ -178,6 +182,12 @@ section.quote h2 {
     .fixed-header-on .main-navigation .navbar-nav > li > a {
         padding-top: 23px;
         padding-bottom: 23px;
+    }
+}
+
+@media (max-width: 991px) {
+    .header-top {
+        display: none;
     }
 }
 
